templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/Governance_Event__c.object-meta.xml
<CustomObject>
    <description>Auditable events produced by scans, agent actions, and metadata governance remediation.</description>
    <label>Governance Event</label>
    <nameField>
        <label>Governance Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>