templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/fields/Actor_Label__c.field-meta.xml
<CustomField>
    <fullName>Actor_Label__c</fullName>
    <label>Actor Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>