templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ScanCompleted</fullName>
                <default>true</default>
                <label>Scan Completed</label>
            </value>
            <value>
                <fullName>OwnerAssigned</fullName>
                <label>Owner Assigned</label>
            </value>
            <value>
                <fullName>DuplicateDetected</fullName>
                <label>Duplicate Detected</label>
            </value>
            <value>
                <fullName>StaleAlert</fullName>
                <label>Stale Alert</label>
            </value>
            <value>
                <fullName>AgentRecommendation</fullName>
                <label>Agent Recommendation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>