templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/fields/Metadata_Asset__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metadata Asset</label>
    <referenceTo>Metadata_Asset__c</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>GovernanceEvents</relationshipName>
    <type>Lookup</type>
</CustomField>