templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/fields/Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>Occurred_On__c</fullName>
    <label>Occurred On</label>
    <type>DateTime</type>
</CustomField>