templates/src/data-curator/content/force-app/main/default/objects/Governance_Event__c/fields/Scan_Run__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scan Run</label>
    <referenceTo>Scan_Run__c</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>GovernanceRunEvents</relationshipName>
    <type>Lookup</type>
</CustomField>